--- a/app/src/main/res/layout/activity_my_requests.xml
+++ b/app/src/main/res/layout/activity_my_requests.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MyRequests">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="activity2">
-    </TextView>
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
