--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_main"
-            android:title="Main" />
+            android:title="Profile" />
         <item
             android:id="@+id/nav_users"
             android:icon="@drawable/ic_menu_users"
