--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -23,6 +23,17 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/buttonConnect"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:elevation="0dp"
+            android:text="connect"
+            android:theme="@style/ThemeOverlay.MyDarkButton"
+            android:visibility="gone" />
+
+        <Button
             android:id="@+id/button"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
